deploy: f0a0ffaffc78ae8b8c47ae72ebe936e19195ffe7

--- a/work/index.html
+++ b/work/index.html
@@ -7,7 +7,7 @@ projects.</p></div><div class=work-item><img src=https://skowalak.github.io/bay/
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div><div class=work-item><img src=https://skowalak.github.io/bay/img/work/sand.png alt=sand class=work-bubble>
 <span class=work-text><strong>My Interest 2</strong>
 &mdash;
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></div><div class=work-item><img src=https://skowalak.github.io/bay/img/work/water.png alt="image for interest 3" class=work-bubble>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></div><h2>Contributions</h2><div class=work-item><img src=https://skowalak.github.io/bay/img/work/water.png alt="image for interest 3" class=work-bubble>
 <span class=work-text><strong>My Interest 3</strong>
 &mdash;
 short description of interest<p>This is some content, which you may or may not want to use to expand a bit on
